test(resource-label): add resource labels to rswag
